# mlx-pio

./: .gitignore  CLAUDE.md  NOTES.md  README.md  SCRATCH.md  STATUS.md
docs/: 802.3-clause147-dme-timing.md  architecture.md  evaluator-spec.md  fleet.md  handoff-2026-07-15.md  journal.md
docs/analysis/: 009-gap-check.md  codex-e2-report.md  narrow-split-w12-unit-mining.md  s2-relaxation-review.md  tiny-champion-eyeball.md  w02-mining-and-orbits.md  w12-seed-orbits.md  w22-post-e2-mining.md
docs/rp2350 datasheet/: 02_colophon.md  03_chapter_1._introduction.md  04_chapter_2._system_bus.md  05_chapter_3._processor_subsystem.md  06_chapter_4._memory.md  07_chapter_5._bootrom.md  08_chapter_6._power.md  09_chapter_7._resets.md  10_chapter_8._clocks.md  11_chapter_9._gpio.md  12_chapter_10._security.md  13_chapter_11._pio.md  14_chapter_12._peripherals.md  15_chapter_13._otp.md  17_appendix_a_register_field_types.md  18_appendix_b_units_used_in_this_document.md  19_appendix_c_hardware_revision_history.md  20_appendix_e_errata.md  21_appendix_h_documentation_release_history.md  block-loop-reference.md  bootrom-crypto-verification.md  load-map-reference.md  tbyb-bootrom-analysis.md
pio_emu_probe/: Cargo.toml
pio_emu_probe/src/: main.rs
pio_harness/: Cargo.toml  README.md
pio_harness/examples/: dump.rs
pio_harness/src/: lib.rs
pio_harness/tests/: irq_repro.rs  irq_trace.rs  reframe_proto.rs  reset_reuse.rs  round_trip.rs  rx_bench_repro.rs  rx_diag.rs  rx_fix.rs  timestamp.rs  tx_single_sm.rs  tx_waveform.rs  wave_replay.rs
pio_harness/tests/data/: current_ns_125mhz_edges.csv  ro_sampled2_cap1_5041edges.txt  ro_sampled2_cap2_4029edges.txt  ro_sampled2_cap3_1125edges.txt  ro_sampled2_cap4_5119edges.txt  ro_sampled2_cap5_2865edges.txt  ro_sampled2_cap6_5111edges.txt  ro_sampled_cap19_1145edges.txt  ro_sampled_cap1_2337edges.txt  ro_sampled_cap2_5109edges.txt  ro_sampled_cap59_1133edges.txt  ro_sampled_cap78_1121edges.txt  ro_sampled_cap89_15843edges.txt  ro_sampled_cap90_1143edges.txt
pio_superopt/: Cargo.toml
pio_superopt/benches/: eval.rs
pio_superopt/examples/: hotloop.rs
pio_superopt/src/: certify.rs  coord.rs  cost.rs  decode.rs  encode.rs  enumerate.rs  fixtures.rs  gene.rs  gene_search.rs  ir.rs  lib.rs  problems.rs  program.rs  rng.rs  run.rs  search.rs  smt.rs  spec_cost.rs  trace.rs
pio_superopt/src/narrow/: engine.rs  mod.rs
pio_superopt/src/smt/: cegis.rs  equiv.rs  mod.rs
pio_superopt/tests/: coord_e2e.rs  narrow_diff.rs  narrow_engine.rs  narrow_soundness.rs  smt_equiv.rs
shard_pio/: README.md  emulator.shard  runner.shard  vectors_data.shard
shard_pio/tools/: gen_vectors.py
shard_pio/vectors/: shard_vectors.jsonl
tickets/: 001-parallel-tempering.md  002-meta-optimize-hyperparameters.md  003-hash-tabu.md  004-eval-performance.md  005-spec-level-oracle.md  006-runner-restructure.md  007-consulted-state-memo.md  008-outcome-grouped-forking.md  009-word-class-digests.md  010-multi-sm-factorization.md  011-data-plane-superposition.md  012-outcome-predicate-reads.md  013-junk-window-known-constant-reads.md  README.md
tools/: find_delay_pairs.py  mine_narrow_split.py  orbit_analysis.py  side_vs_delay_census.py
tools/logic2-dme-decoder/: HighLevelAnalyzer.py  README.md  decode_csv.py  dme_core.py  eth_parse.py  extension.json  requirements-dev.txt  sample_capture.csv  test_dme_decode.py  test_hla_stream.py
