[package]
name = "pio_harness"
version = "0.1.0"
edition = "2024"

[dependencies]
rp2350-emu = "0.2.5"

[dev-dependencies]
pio = "=0.3.0"

[patch.crates-io]
picoem-common = { path = "../vendor/picoem-common" }
# Vendored so we can add a PIO-only fast-path step that skips the CPU cores and
# non-PIO peripherals — the superoptimizer runs one SM and no firmware, so the
# full per-cycle emulation is ~95% wasted work (ticket 004).
rp2350-emu = { path = "../vendor/rp2350-emu" }
