[package]
name = "pio_superopt"
version = "0.1.0"
edition = "2021"
description = "Simulated-annealing superoptimizer for RP2350 PIO programs: symbolic IR + encoder."

[dependencies]
# The runner drives real programs through the emulator harness.
pio_harness = { path = "../pio_harness" }
# Snapshot/resume serialization (trace JSONL rows). serde derives sit on the
# IR/Program types so a search snapshot round-trips byte-identically.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Ctrl-C -> stop flag -> snapshot-and-exit in the runner binary.
ctrlc = "3"
# Shard-coordination server/worker (`superopt serve` / `superopt work`):
# tiny_http serves the lease protocol, ureq is the worker-side client.
# JSON bodies go through serde_json strings — no json features needed.
tiny_http = "0.12"
ureq = "2"

[dev-dependencies]
# Ground-truth decoder, used to prove the encoder round-trips
# (decode(encode(ir)) == ir).
picoem-common = "0.2"

# Statistical benchmarking for the eval hot path (ticket 004).
criterion = "0.5"

[[bench]]
name = "eval"
harness = false

# The eval hot path crosses four crate boundaries (pio_superopt -> pio_harness
# -> rp2350-emu -> picoem-common) through thin pub fns (tick_pio ->
# step_n_with_pins -> step_with_pins -> execute_cycle). Without LTO those calls
# aren't inlined — measured ~15% of eval was cross-crate call overhead (ticket
# 004). LTO lets the compiler inline and optimize across them. Applied to the
# search-run (release), bench, and profiling-example builds.
[profile.release]
lto = "fat"
codegen-units = 1

[profile.bench]
lto = "fat"
codegen-units = 1

# Same patch the harness uses, so the transitive (rp2350-emu -> picoem-common)
# and direct dev-dependency both resolve to the vendored, fixed copy.
[patch.crates-io]
picoem-common = { path = "../vendor/picoem-common" }
# Vendored emulator (see pio_harness): forked for a PIO-only fast step.
rp2350-emu = { path = "../vendor/rp2350-emu" }
